syntax = "proto3";

package task;
import "github.com/gogo/protobuf/gogoproto/gogo.proto";

option go_package                      = "task";


message WorldResp {
    string Content = 1;
    int64 aid = 2;
}

message HttpResult {
    int64 Code = 1 [(gogoproto.jsontag) = 'code'];
    string Message = 2 [(gogoproto.jsontag) = 'message'];
    repeated string Data = 3 [(gogoproto.jsontag) = 'data'];
}